# TaylorTD

./: .gitignore  CITATION.cff  CT_command.txt  Makefile  README.md  Residual_MAGE.py  _conda_env.yml  ddpg_taylor.py  env_loop.py  humanoid_main.py  hyperParam_parsArg.py  imagination.py  main.py  old_Makefile  pyproject.toml  setup.py  sync  td3.py  td3_taylor.py  utils.py  wrappers.py
MC_expctd_TD3/: CT_actionCov_search.txt  README.md  ddpg.py  env_loop.py  humanoid_main.py  main.py  run_example.sh  td3.py  test_humanoid.py  utils.py
MC_expctd_TD3/envs/gymmb/: __init__.py  ant.py  humanoid.py  pendulum.py  walker2d.py
envs/gymmb/: __init__.py  ant.py  cheetah.py  hopper.py  humanoid.py  pendulum.py  pusher.py  swimmer.py  test_mb_envs.py
notebooks/: Hessian_Experiments.ipynb  Untitled.ipynb  hessian.ipynb
taylortd/: Residual_MAGE.py  __init__.py  buffer.py  ddpg.py  env_loop.py  hessian.py  hyperParam_parsArg.py  imagination.py  logger.py  main.py  metriclogger.py  models.py  normalizer.py  radam.py  regression_tests.py  reward_model.py  sacred_utils.py  td3_taylor.py  utils.py  video_recorder.py  wrappers.py
taylortd/MC_expctd_TD3/: Makefile  Notes.txt  buffer.py  imagination.py  perturbed_imagination.py
taylortd/envs/gymmb/: __init__.py  ant.py  hopper.py  test_mb_envs.py
